fix z-index issue

--- a/src/components/Dashboard/Assignment/assignment.scss
+++ b/src/components/Dashboard/Assignment/assignment.scss
@@ -1,7 +1,9 @@
 .assignment{
   margin: 0;
   margin-top: -1em;
-  position: relative;
+	position: relative;
+	z-index: 888;
+	
   
   &__body {
 		padding-top: 1.5em;
