--- a/src/components/Dashboard/Classroom/classroom.scss
+++ b/src/components/Dashboard/Classroom/classroom.scss
@@ -1,6 +1,8 @@
 .classroom {
 	margin-top: -1em;
 	position: relative;
+	z-index: 888;
+
 
 	&__body {
 		padding-top: 1.5em;
